<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8B894"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/txt_instruction"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOne"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/tAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_amount"
        android:inputType="number"
        android:padding="20sp"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/tPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="(%)"
        android:ems="10"
        android:hint="@string/txt_percent"
        android:inputType="number"
        android:padding="20sp"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tAmount"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/tTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_time"
        android:inputType="numberDecimal"
        android:padding="20sp"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tPercent"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:text="@string/txt_button"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/btncolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tTime"
        app:layout_constraintVertical_bias="0.297" />


</androidx.constraintlayout.widget.ConstraintLayout>